--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1368,6 +1368,9 @@ select{
 .mb-2{
 	margin-bottom: 0.5rem;
 }
+.mb-3{
+	margin-bottom: 0.75rem;
+}
 .mt-24{
 	margin-top: 6rem;
 }
@@ -1395,20 +1398,23 @@ select{
 .-ml-1{
 	margin-left: -0.25rem;
 }
-.mt-\[200px\]{
-	margin-top: 200px;
-}
 .-mt-px{
 	margin-top: -1px;
 }
 .mb-5{
 	margin-bottom: 1.25rem;
 }
+.mt-\[200px\]{
+	margin-top: 200px;
+}
 .block{
 	display: block;
 }
 .inline-block{
 	display: inline-block;
+}
+.inline{
+	display: inline;
 }
 .flex{
 	display: flex;
@@ -1421,6 +1427,9 @@ select{
 }
 .grid{
 	display: grid;
+}
+.contents{
+	display: contents;
 }
 .hidden{
 	display: none;
@@ -1458,6 +1467,9 @@ select{
 .h-32{
 	height: 8rem;
 }
+.h-40{
+	height: 10rem;
+}
 .h-48{
 	height: 12rem;
 }
@@ -1488,9 +1500,6 @@ select{
 .h-3{
 	height: 0.75rem;
 }
-.h-40{
-	height: 10rem;
-}
 .h-screen{
 	height: 100vh;
 }
@@ -1502,6 +1511,9 @@ select{
 }
 .min-h-screen{
 	min-height: 100vh;
+}
+.min-h-\[570px\]{
+	min-height: 570px;
 }
 .w-5{
 	width: 1.25rem;
@@ -1981,11 +1993,14 @@ select{
 .border-l-2{
 	border-left-width: 2px;
 }
-.border-r-0{
-	border-right-width: 0px;
+.border-l{
+	border-left-width: 1px;
 }
 .border-r{
 	border-right-width: 1px;
+}
+.border-r-0{
+	border-right-width: 0px;
 }
 .border-none{
 	border-style: none;
@@ -2040,6 +2055,14 @@ select{
 .border-gray-400{
 	--tw-border-opacity: 1;
 	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
+}
+.border-t-gray-200{
+	--tw-border-opacity: 1;
+	border-top-color: rgba(229, 231, 235, var(--tw-border-opacity));
+}
+.border-l-blue-400{
+	--tw-border-opacity: 1;
+	border-left-color: rgba(96, 165, 250, var(--tw-border-opacity));
 }
 .bg-white{
 	--tw-bg-opacity: 1;
@@ -2131,6 +2154,10 @@ select{
 .bg-purple-300{
 	--tw-bg-opacity: 1;
 	background-color: rgba(196, 181, 253, var(--tw-bg-opacity));
+}
+.bg-gray-300{
+	--tw-bg-opacity: 1;
+	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
 }
 .bg-black{
 	--tw-bg-opacity: 1;
@@ -2256,9 +2283,25 @@ select{
 	padding-top: 4rem;
 	padding-bottom: 4rem;
 }
+.py-0{
+	padding-top: 0px;
+	padding-bottom: 0px;
+}
+.px-5{
+	padding-left: 1.25rem;
+	padding-right: 1.25rem;
+}
 .py-2\.5{
 	padding-top: 0.625rem;
 	padding-bottom: 0.625rem;
+}
+.py-7{
+	padding-top: 1.75rem;
+	padding-bottom: 1.75rem;
+}
+.px-10{
+	padding-left: 2.5rem;
+	padding-right: 2.5rem;
 }
 .pt-6{
 	padding-top: 1.5rem;
@@ -2304,6 +2347,18 @@ select{
 }
 .pb-5{
 	padding-bottom: 1.25rem;
+}
+.pr-3{
+	padding-right: 0.75rem;
+}
+.pt-2\.5{
+	padding-top: 0.625rem;
+}
+.pb-3\.5{
+	padding-bottom: 0.875rem;
+}
+.pb-8{
+	padding-bottom: 2rem;
 }
 .pt-1\.5{
 	padding-top: 0.375rem;
@@ -2546,6 +2601,9 @@ select{
 .opacity-50{
 	opacity: 0.5;
 }
+.opacity-70{
+	opacity: 0.7;
+}
 .opacity-90{
 	opacity: 0.9;
 }
@@ -2779,6 +2837,10 @@ select{
 	--tw-text-opacity: 1;
 	color: rgba(96, 165, 250, var(--tw-text-opacity));
 }
+.hover\:text-gray-600:hover{
+	--tw-text-opacity: 1;
+	color: rgba(75, 85, 99, var(--tw-text-opacity));
+}
 .hover\:text-gray-50:hover{
 	--tw-text-opacity: 1;
 	color: rgba(249, 250, 251, var(--tw-text-opacity));
@@ -2990,6 +3052,22 @@ select{
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
+.group:hover .group-hover\:bg-gray-600{
+	--tw-bg-opacity: 1;
+	background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
+}
+.group:hover .group-hover\:bg-gray-300{
+	--tw-bg-opacity: 1;
+	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
+}
+.group:hover .group-hover\:bg-gray-400{
+	--tw-bg-opacity: 1;
+	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
+}
+.group:hover .group-hover\:bg-gray-200{
+	--tw-bg-opacity: 1;
+	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
+}
 .group:hover .group-hover\:text-gray-800{
 	--tw-text-opacity: 1;
 	color: rgba(31, 41, 55, var(--tw-text-opacity));
@@ -3194,6 +3272,10 @@ select{
 	--tw-ring-opacity: 1;
 	--tw-ring-color: rgba(107, 114, 128, var(--tw-ring-opacity));
 }
+.dark .dark\:hover\:bg-purple-700:hover{
+	--tw-bg-opacity: 1;
+	background-color: rgba(109, 40, 217, var(--tw-bg-opacity));
+}
 .dark .dark\:hover\:bg-purple-500:hover{
 	--tw-bg-opacity: 1;
 	background-color: rgba(139, 92, 246, var(--tw-bg-opacity));
@@ -3202,10 +3284,6 @@ select{
 	--tw-bg-opacity: 1;
 	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
 }
-.dark .dark\:hover\:bg-purple-700:hover{
-	--tw-bg-opacity: 1;
-	background-color: rgba(109, 40, 217, var(--tw-bg-opacity));
-}
 .dark .dark\:hover\:bg-gray-800:hover{
 	--tw-bg-opacity: 1;
 	background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
@@ -3213,6 +3291,10 @@ select{
 .dark .dark\:hover\:bg-purple-600:hover{
 	--tw-bg-opacity: 1;
 	background-color: rgba(124, 58, 237, var(--tw-bg-opacity));
+}
+.dark .dark\:hover\:text-gray-400:hover{
+	--tw-text-opacity: 1;
+	color: rgba(156, 163, 175, var(--tw-text-opacity));
 }
 .dark .dark\:hover\:text-gray-200:hover{
 	--tw-text-opacity: 1;
@@ -3237,6 +3319,10 @@ select{
 .dark .group:hover .dark\:group-hover\:bg-gray-700{
 	--tw-bg-opacity: 1;
 	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
+}
+.dark .group:hover .dark\:group-hover\:bg-gray-900{
+	--tw-bg-opacity: 1;
+	background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
 }
 .dark .group:hover .dark\:group-hover\:text-gray-400{
 	--tw-text-opacity: 1;
@@ -3509,6 +3595,9 @@ select{
 	.md\:grid-cols-4{
 		grid-template-columns: repeat(4, minmax(0, 1fr));
 	}
+	.md\:grid-cols-10{
+		grid-template-columns: repeat(10, minmax(0, 1fr));
+	}
 	.md\:flex-row{
 		flex-direction: row;
 	}
@@ -3583,6 +3672,10 @@ select{
 		padding-left: 2rem;
 		padding-right: 2rem;
 	}
+	.md\:px-2{
+		padding-left: 0.5rem;
+		padding-right: 0.5rem;
+	}
 	.md\:px-4{
 		padding-left: 1rem;
 		padding-right: 1rem;
@@ -3602,10 +3695,6 @@ select{
 	.md\:px-12{
 		padding-left: 3rem;
 		padding-right: 3rem;
-	}
-	.md\:px-2{
-		padding-left: 0.5rem;
-		padding-right: 0.5rem;
 	}
 	.md\:py-3{
 		padding-top: 0.75rem;
