--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1386,8 +1386,8 @@ select{
 .mb-32{
 	margin-bottom: 8rem;
 }
-.mt-48{
-	margin-top: 12rem;
+.mt-64{
+	margin-top: 16rem;
 }
 .mt-16{
 	margin-top: 4rem;
@@ -2063,6 +2063,10 @@ select{
 .border-l-blue-400{
 	--tw-border-opacity: 1;
 	border-left-color: rgba(96, 165, 250, var(--tw-border-opacity));
+}
+.border-t-gray-100{
+	--tw-border-opacity: 1;
+	border-top-color: rgba(243, 244, 246, var(--tw-border-opacity));
 }
 .bg-white{
 	--tw-bg-opacity: 1;
@@ -3052,21 +3056,13 @@ select{
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
-.group:hover .group-hover\:bg-gray-600{
+.group:hover .group-hover\:bg-gray-200{
 	--tw-bg-opacity: 1;
-	background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
+	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
 .group:hover .group-hover\:bg-gray-300{
 	--tw-bg-opacity: 1;
 	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
-}
-.group:hover .group-hover\:bg-gray-400{
-	--tw-bg-opacity: 1;
-	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
-}
-.group:hover .group-hover\:bg-gray-200{
-	--tw-bg-opacity: 1;
-	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
 .group:hover .group-hover\:text-gray-800{
 	--tw-text-opacity: 1;
@@ -3138,6 +3134,10 @@ select{
 .dark .dark\:border-gray-200{
 	--tw-border-opacity: 1;
 	border-color: rgba(229, 231, 235, var(--tw-border-opacity));
+}
+.dark .dark\:border-t-gray-600{
+	--tw-border-opacity: 1;
+	border-top-color: rgba(75, 85, 99, var(--tw-border-opacity));
 }
 .dark .dark\:bg-white{
 	--tw-bg-opacity: 1;
@@ -3606,6 +3606,9 @@ select{
 	}
 	.md\:justify-start{
 		justify-content: flex-start;
+	}
+	.md\:justify-end{
+		justify-content: flex-end;
 	}
 	.md\:gap-6{
 		gap: 1.5rem;
