--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1560,6 +1560,9 @@ select{
 .w-32{
 	width: 8rem;
 }
+.w-3{
+	width: 0.75rem;
+}
 .w-72{
 	width: 18rem;
 }
@@ -1574,9 +1577,6 @@ select{
 }
 .w-0\.5{
 	width: 0.125rem;
-}
-.w-3{
-	width: 0.75rem;
 }
 .w-56{
 	width: 14rem;
@@ -1593,8 +1593,14 @@ select{
 .w-36{
 	width: 9rem;
 }
+.w-3\/5{
+	width: 60%;
+}
 .min-w-0{
 	min-width: 0px;
+}
+.min-w-full{
+	min-width: 100%;
 }
 .max-w-screen-xl{
 	max-width: 1280px;
@@ -1614,6 +1620,21 @@ select{
 .max-w-5xl{
 	max-width: 64rem;
 }
+.max-w-\[\]{
+	max-width: ;
+}
+.max-w-\[500px\]{
+	max-width: 500px;
+}
+.max-w-\[500px\]\'\]\]{
+	max-width: 500px]'];
+}
+.max-w-\[500px\]\'\]{
+	max-width: 500px]';
+}
+.max-w-sm{
+	max-width: 24rem;
+}
 .flex-1{
 	flex: 1 1 0%;
 }
@@ -1622,6 +1643,9 @@ select{
 }
 .flex-grow{
 	flex-grow: 1;
+}
+.table-auto{
+	table-layout: auto;
 }
 .origin-top-left{
 	transform-origin: top left;
@@ -1785,6 +1809,9 @@ select{
 .gap-3{
 	gap: 0.75rem;
 }
+.gap-2{
+	gap: 0.5rem;
+}
 .gap-x-4{
 	-moz-column-gap: 1rem;
 	     column-gap: 1rem;
@@ -1847,6 +1874,11 @@ select{
 	margin-top: calc(0.375rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(0.375rem * var(--tw-space-y-reverse));
 }
+.space-x-1 > :not([hidden]) ~ :not([hidden]){
+	--tw-space-x-reverse: 0;
+	margin-right: calc(0.25rem * var(--tw-space-x-reverse));
+	margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
 .space-y-10 > :not([hidden]) ~ :not([hidden]){
 	--tw-space-y-reverse: 0;
 	margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1861,11 +1893,6 @@ select{
 	--tw-space-x-reverse: 0;
 	margin-right: calc(0.75rem * var(--tw-space-x-reverse));
 	margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
-}
-.space-x-1 > :not([hidden]) ~ :not([hidden]){
-	--tw-space-x-reverse: 0;
-	margin-right: calc(0.25rem * var(--tw-space-x-reverse));
-	margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .space-y-12 > :not([hidden]) ~ :not([hidden]){
 	--tw-space-y-reverse: 0;
@@ -1892,6 +1919,10 @@ select{
 	border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
 	border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
 }
+.divide-gray-200 > :not([hidden]) ~ :not([hidden]){
+	--tw-divide-opacity: 1;
+	border-color: rgba(229, 231, 235, var(--tw-divide-opacity));
+}
 .overflow-auto{
 	overflow: auto;
 }
@@ -1913,6 +1944,9 @@ select{
 .truncate{
 	overflow: hidden;
 	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+.whitespace-nowrap{
 	white-space: nowrap;
 }
 .break-all{
@@ -2143,6 +2177,10 @@ select{
 	--tw-bg-opacity: 1;
 	background-color: rgba(252, 165, 165, var(--tw-bg-opacity));
 }
+.bg-green-200{
+	--tw-bg-opacity: 1;
+	background-color: rgba(167, 243, 208, var(--tw-bg-opacity));
+}
 .bg-purple-400{
 	--tw-bg-opacity: 1;
 	background-color: rgba(167, 139, 250, var(--tw-bg-opacity));
@@ -2337,6 +2375,12 @@ select{
 .pb-1{
 	padding-bottom: 0.25rem;
 }
+.pb-0\.5{
+	padding-bottom: 0.125rem;
+}
+.pb-0{
+	padding-bottom: 0px;
+}
 .pr-2{
 	padding-right: 0.5rem;
 }
@@ -2345,6 +2389,9 @@ select{
 }
 .pl-8{
 	padding-left: 2rem;
+}
+.pb-20{
+	padding-bottom: 5rem;
 }
 .pt-8{
 	padding-top: 2rem;
@@ -2370,6 +2417,15 @@ select{
 .pb-2{
 	padding-bottom: 0.5rem;
 }
+.pt-0\.5{
+	padding-top: 0.125rem;
+}
+.pt-0{
+	padding-top: 0px;
+}
+.text-left{
+	text-align: left;
+}
 .text-center{
 	text-align: center;
 }
@@ -2381,6 +2437,9 @@ select{
 }
 .align-middle{
 	vertical-align: middle;
+}
+.align-bottom{
+	vertical-align: bottom;
 }
 .font-sans{
 	font-family: Nunito, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -2530,6 +2589,10 @@ select{
 	--tw-text-opacity: 1;
 	color: rgba(59, 130, 246, var(--tw-text-opacity));
 }
+.text-gray-200{
+	--tw-text-opacity: 1;
+	color: rgba(229, 231, 235, var(--tw-text-opacity));
+}
 .text-blue-600{
 	--tw-text-opacity: 1;
 	color: rgba(37, 99, 235, var(--tw-text-opacity));
@@ -2566,9 +2629,9 @@ select{
 	--tw-text-opacity: 1;
 	color: rgba(221, 214, 254, var(--tw-text-opacity));
 }
-.text-gray-200{
+.text-green-800{
 	--tw-text-opacity: 1;
-	color: rgba(229, 231, 235, var(--tw-text-opacity));
+	color: rgba(6, 95, 70, var(--tw-text-opacity));
 }
 .text-gray-300{
 	--tw-text-opacity: 1;
@@ -2691,13 +2754,13 @@ select{
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 	transition-duration: 150ms;
 }
-.transition-transform{
-	transition-property: transform;
+.transition-opacity{
+	transition-property: opacity;
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 	transition-duration: 150ms;
 }
-.transition-opacity{
-	transition-property: opacity;
+.transition-transform{
+	transition-property: transform;
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 	transition-duration: 150ms;
 }
@@ -2845,6 +2908,10 @@ select{
 	--tw-text-opacity: 1;
 	color: rgba(75, 85, 99, var(--tw-text-opacity));
 }
+.hover\:text-indigo-900:hover{
+	--tw-text-opacity: 1;
+	color: rgba(49, 46, 129, var(--tw-text-opacity));
+}
 .hover\:text-gray-50:hover{
 	--tw-text-opacity: 1;
 	color: rgba(249, 250, 251, var(--tw-text-opacity));
@@ -2979,6 +3046,10 @@ select{
 	--tw-ring-opacity: 1;
 	--tw-ring-color: rgba(79, 70, 229, var(--tw-ring-opacity));
 }
+.focus\:ring-indigo-500:focus{
+	--tw-ring-opacity: 1;
+	--tw-ring-color: rgba(99, 102, 241, var(--tw-ring-opacity));
+}
 .focus\:ring-purple-600:focus{
 	--tw-ring-opacity: 1;
 	--tw-ring-color: rgba(124, 58, 237, var(--tw-ring-opacity));
@@ -3103,6 +3174,10 @@ select{
 	--tw-divide-opacity: 1;
 	border-color: rgba(55, 65, 81, var(--tw-divide-opacity));
 }
+.dark .dark\:divide-gray-900 > :not([hidden]) ~ :not([hidden]){
+	--tw-divide-opacity: 1;
+	border-color: rgba(17, 24, 39, var(--tw-divide-opacity));
+}
 .dark .dark\:border-gray-600{
 	--tw-border-opacity: 1;
 	border-color: rgba(75, 85, 99, var(--tw-border-opacity));
@@ -3114,6 +3189,10 @@ select{
 .dark .dark\:border-gray-700{
 	--tw-border-opacity: 1;
 	border-color: rgba(55, 65, 81, var(--tw-border-opacity));
+}
+.dark .dark\:border-gray-900{
+	--tw-border-opacity: 1;
+	border-color: rgba(17, 24, 39, var(--tw-border-opacity));
 }
 .dark .dark\:border-purple-600{
 	--tw-border-opacity: 1;
@@ -3344,6 +3423,14 @@ select{
 		margin-top: -1px;
 		margin-bottom: -1px;
 	}
+	.sm\:-mx-6{
+		margin-left: -1.5rem;
+		margin-right: -1.5rem;
+	}
+	.sm\:my-8{
+		margin-top: 2rem;
+		margin-bottom: 2rem;
+	}
 	.sm\:ml-3{
 		margin-left: 0.75rem;
 	}
@@ -3368,6 +3455,9 @@ select{
 	.sm\:block{
 		display: block;
 	}
+	.sm\:inline-block{
+		display: inline-block;
+	}
 	.sm\:flex{
 		display: flex;
 	}
@@ -3376,6 +3466,9 @@ select{
 	}
 	.sm\:h-10{
 		height: 2.5rem;
+	}
+	.sm\:h-screen{
+		height: 100vh;
 	}
 	.sm\:w-10{
 		width: 2.5rem;
@@ -3418,6 +3511,9 @@ select{
 	.sm\:grid-cols-9{
 		grid-template-columns: repeat(9, minmax(0, 1fr));
 	}
+	.sm\:flex-row-reverse{
+		flex-direction: row-reverse;
+	}
 	.sm\:items-start{
 		align-items: flex-start;
 	}
@@ -3457,6 +3553,9 @@ select{
 	.sm\:p-6{
 		padding: 1.5rem;
 	}
+	.sm\:p-0{
+		padding: 0px;
+	}
 	.sm\:px-6{
 		padding-left: 1.5rem;
 		padding-right: 1.5rem;
@@ -3477,6 +3576,9 @@ select{
 	}
 	.sm\:text-left{
 		text-align: left;
+	}
+	.sm\:align-middle{
+		vertical-align: middle;
 	}
 	.sm\:text-sm{
 		font-size: 0.875rem;
@@ -3763,6 +3865,10 @@ select{
 @media (min-width: 1024px){
 	.lg\:col-span-4{
 		grid-column: span 4 / span 4;
+	}
+	.lg\:-mx-8{
+		margin-left: -2rem;
+		margin-right: -2rem;
 	}
 	.lg\:mr-32{
 		margin-right: 8rem;
