--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1371,6 +1371,9 @@ select{
 .mb-3{
 	margin-bottom: 0.75rem;
 }
+.mb-5{
+	margin-bottom: 1.25rem;
+}
 .mt-24{
 	margin-top: 6rem;
 }
@@ -1400,9 +1403,6 @@ select{
 }
 .-mt-px{
 	margin-top: -1px;
-}
-.mb-5{
-	margin-bottom: 1.25rem;
 }
 .mt-\[200px\]{
 	margin-top: 200px;
@@ -1566,6 +1566,9 @@ select{
 .w-72{
 	width: 18rem;
 }
+.w-1{
+	width: 0.25rem;
+}
 .w-96{
 	width: 24rem;
 }
@@ -1584,17 +1587,11 @@ select{
 .w-64{
 	width: 16rem;
 }
-.w-1{
-	width: 0.25rem;
-}
 .w-2{
 	width: 0.5rem;
 }
 .w-36{
 	width: 9rem;
-}
-.w-3\/5{
-	width: 60%;
 }
 .min-w-0{
 	min-width: 0px;
@@ -1619,21 +1616,6 @@ select{
 }
 .max-w-5xl{
 	max-width: 64rem;
-}
-.max-w-\[\]{
-	max-width: ;
-}
-.max-w-\[500px\]{
-	max-width: 500px;
-}
-.max-w-\[500px\]\'\]\]{
-	max-width: 500px]'];
-}
-.max-w-\[500px\]\'\]{
-	max-width: 500px]';
-}
-.max-w-sm{
-	max-width: 24rem;
 }
 .flex-1{
 	flex: 1 1 0%;
@@ -1664,6 +1646,10 @@ select{
 	--tw-translate-y: 0px;
 	transform: var(--tw-transform);
 }
+.-translate-y-2{
+	--tw-translate-y: -0.5rem;
+	transform: var(--tw-transform);
+}
 .-translate-x-1\/2{
 	--tw-translate-x: -50%;
 	transform: var(--tw-transform);
@@ -1686,10 +1672,6 @@ select{
 }
 .-translate-x-20{
 	--tw-translate-x: -5rem;
-	transform: var(--tw-transform);
-}
-.-translate-y-2{
-	--tw-translate-y: -0.5rem;
 	transform: var(--tw-transform);
 }
 .translate-y-6{
@@ -1808,9 +1790,6 @@ select{
 }
 .gap-3{
 	gap: 0.75rem;
-}
-.gap-2{
-	gap: 0.5rem;
 }
 .gap-x-4{
 	-moz-column-gap: 1rem;
@@ -2021,11 +2000,11 @@ select{
 .border-b{
 	border-bottom-width: 1px;
 }
-.border-r-4{
-	border-right-width: 4px;
-}
 .border-l-2{
 	border-left-width: 2px;
+}
+.border-r-4{
+	border-right-width: 4px;
 }
 .border-l{
 	border-left-width: 1px;
@@ -2058,6 +2037,10 @@ select{
 	--tw-border-opacity: 1;
 	border-color: rgba(243, 244, 246, var(--tw-border-opacity));
 }
+.border-blue-600{
+	--tw-border-opacity: 1;
+	border-color: rgba(37, 99, 235, var(--tw-border-opacity));
+}
 .border-gray-50{
 	--tw-border-opacity: 1;
 	border-color: rgba(249, 250, 251, var(--tw-border-opacity));
@@ -2081,10 +2064,6 @@ select{
 .border-purple-600{
 	--tw-border-opacity: 1;
 	border-color: rgba(124, 58, 237, var(--tw-border-opacity));
-}
-.border-blue-600{
-	--tw-border-opacity: 1;
-	border-color: rgba(37, 99, 235, var(--tw-border-opacity));
 }
 .border-gray-400{
 	--tw-border-opacity: 1;
@@ -2176,10 +2155,6 @@ select{
 .bg-red-300{
 	--tw-bg-opacity: 1;
 	background-color: rgba(252, 165, 165, var(--tw-bg-opacity));
-}
-.bg-green-200{
-	--tw-bg-opacity: 1;
-	background-color: rgba(167, 243, 208, var(--tw-bg-opacity));
 }
 .bg-purple-400{
 	--tw-bg-opacity: 1;
@@ -2374,12 +2349,6 @@ select{
 }
 .pb-1{
 	padding-bottom: 0.25rem;
-}
-.pb-0\.5{
-	padding-bottom: 0.125rem;
-}
-.pb-0{
-	padding-bottom: 0px;
 }
 .pr-2{
 	padding-right: 0.5rem;
@@ -2754,13 +2723,13 @@ select{
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 	transition-duration: 150ms;
 }
-.transition-opacity{
-	transition-property: opacity;
+.transition-transform{
+	transition-property: transform;
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 	transition-duration: 150ms;
 }
-.transition-transform{
-	transition-property: transform;
+.transition-opacity{
+	transition-property: opacity;
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 	transition-duration: 150ms;
 }
@@ -2779,11 +2748,11 @@ select{
 .duration-1000{
 	transition-duration: 1000ms;
 }
-.duration-500{
-	transition-duration: 500ms;
-}
 .duration-700{
 	transition-duration: 700ms;
+}
+.duration-500{
+	transition-duration: 500ms;
 }
 .ease-in-out{
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -3214,6 +3183,10 @@ select{
 	--tw-border-opacity: 1;
 	border-color: rgba(229, 231, 235, var(--tw-border-opacity));
 }
+.dark .dark\:border-gray-300{
+	--tw-border-opacity: 1;
+	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
+}
 .dark .dark\:border-t-gray-600{
 	--tw-border-opacity: 1;
 	border-top-color: rgba(75, 85, 99, var(--tw-border-opacity));
@@ -3254,6 +3227,10 @@ select{
 	--tw-bg-opacity: 1;
 	background-color: rgba(4, 120, 87, var(--tw-bg-opacity));
 }
+.dark .dark\:bg-gray-900{
+	--tw-bg-opacity: 1;
+	background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
+}
 .dark .dark\:bg-purple-700{
 	--tw-bg-opacity: 1;
 	background-color: rgba(109, 40, 217, var(--tw-bg-opacity));
@@ -3262,13 +3239,13 @@ select{
 	--tw-bg-opacity: 1;
 	background-color: rgba(167, 139, 250, var(--tw-bg-opacity));
 }
-.dark .dark\:bg-gray-900{
-	--tw-bg-opacity: 1;
-	background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
-}
 .dark .dark\:bg-red-600{
 	--tw-bg-opacity: 1;
 	background-color: rgba(220, 38, 38, var(--tw-bg-opacity));
+}
+.dark .dark\:bg-gray-100{
+	--tw-bg-opacity: 1;
+	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
 }
 .dark .dark\:bg-opacity-80{
 	--tw-bg-opacity: 0.8;
@@ -3312,6 +3289,10 @@ select{
 	--tw-text-opacity: 1;
 	color: rgba(107, 114, 128, var(--tw-text-opacity));
 }
+.dark .dark\:text-gray-100{
+	--tw-text-opacity: 1;
+	color: rgba(243, 244, 246, var(--tw-text-opacity));
+}
 .dark .dark\:text-purple-300{
 	--tw-text-opacity: 1;
 	color: rgba(196, 181, 253, var(--tw-text-opacity));
@@ -3324,13 +3305,25 @@ select{
 	--tw-text-opacity: 1;
 	color: rgba(147, 197, 253, var(--tw-text-opacity));
 }
-.dark .dark\:text-gray-100{
+.dark .dark\:text-blue-50{
 	--tw-text-opacity: 1;
-	color: rgba(243, 244, 246, var(--tw-text-opacity));
+	color: rgba(239, 246, 255, var(--tw-text-opacity));
 }
 .dark .dark\:text-red-100{
 	--tw-text-opacity: 1;
 	color: rgba(254, 226, 226, var(--tw-text-opacity));
+}
+.dark .dark\:text-red-500{
+	--tw-text-opacity: 1;
+	color: rgba(239, 68, 68, var(--tw-text-opacity));
+}
+.dark .dark\:text-red-200{
+	--tw-text-opacity: 1;
+	color: rgba(254, 202, 202, var(--tw-text-opacity));
+}
+.dark .dark\:text-gray-800{
+	--tw-text-opacity: 1;
+	color: rgba(31, 41, 55, var(--tw-text-opacity));
 }
 .dark .dark\:placeholder-gray-500::-moz-placeholder{
 	--tw-placeholder-opacity: 1;
@@ -3371,13 +3364,13 @@ select{
 	--tw-bg-opacity: 1;
 	background-color: rgba(124, 58, 237, var(--tw-bg-opacity));
 }
-.dark .dark\:hover\:text-gray-400:hover{
-	--tw-text-opacity: 1;
-	color: rgba(156, 163, 175, var(--tw-text-opacity));
-}
 .dark .dark\:hover\:text-gray-200:hover{
 	--tw-text-opacity: 1;
 	color: rgba(229, 231, 235, var(--tw-text-opacity));
+}
+.dark .dark\:hover\:text-gray-400:hover{
+	--tw-text-opacity: 1;
+	color: rgba(156, 163, 175, var(--tw-text-opacity));
 }
 .dark .dark\:hover\:text-gray-300:hover{
 	--tw-text-opacity: 1;
