--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1259,13 +1259,13 @@ select{
 	margin-left: 0.75rem;
 	margin-right: 0.75rem;
 }
-.my-4{
-	margin-top: 1rem;
-	margin-bottom: 1rem;
-}
 .my-2{
 	margin-top: 0.5rem;
 	margin-bottom: 0.5rem;
+}
+.my-4{
+	margin-top: 1rem;
+	margin-bottom: 1rem;
 }
 .mx-1{
 	margin-left: 0.25rem;
@@ -1503,9 +1503,6 @@ select{
 .h-screen{
 	height: 100vh;
 }
-.h-2{
-	height: 0.5rem;
-}
 .max-h-full{
 	max-height: 100%;
 }
@@ -1557,6 +1554,9 @@ select{
 .w-20{
 	width: 5rem;
 }
+.w-56{
+	width: 14rem;
+}
 .w-32{
 	width: 8rem;
 }
@@ -1581,14 +1581,8 @@ select{
 .w-0\.5{
 	width: 0.125rem;
 }
-.w-56{
-	width: 14rem;
-}
 .w-64{
 	width: 16rem;
-}
-.w-2{
-	width: 0.5rem;
 }
 .w-36{
 	width: 9rem;
@@ -1674,20 +1668,12 @@ select{
 	--tw-translate-x: -5rem;
 	transform: var(--tw-transform);
 }
-.translate-y-6{
-	--tw-translate-y: 1.5rem;
-	transform: var(--tw-transform);
-}
 .-translate-x-3{
 	--tw-translate-x: -0.75rem;
 	transform: var(--tw-transform);
 }
-.-translate-y-0\.5{
-	--tw-translate-y: -0.125rem;
-	transform: var(--tw-transform);
-}
-.-translate-y-0{
-	--tw-translate-y: 0px;
+.translate-y-6{
+	--tw-translate-y: 1.5rem;
 	transform: var(--tw-transform);
 }
 .rotate-90{
@@ -2180,10 +2166,6 @@ select{
 	--tw-bg-opacity: 1;
 	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
 }
-.bg-green-300{
-	--tw-bg-opacity: 1;
-	background-color: rgba(110, 231, 183, var(--tw-bg-opacity));
-}
 .bg-opacity-25{
 	--tw-bg-opacity: 0.25;
 }
@@ -2299,6 +2281,10 @@ select{
 .py-16{
 	padding-top: 4rem;
 	padding-bottom: 4rem;
+}
+.py-0\.5{
+	padding-top: 0.125rem;
+	padding-bottom: 0.125rem;
 }
 .py-0{
 	padding-top: 0px;
@@ -2476,9 +2462,6 @@ select{
 .leading-4{
 	line-height: 1rem;
 }
-.leading-none{
-	line-height: 1;
-}
 .leading-relaxed{
 	line-height: 1.625;
 }
@@ -2613,6 +2596,18 @@ select{
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
+.placeholder-gray-500::-moz-placeholder{
+	--tw-placeholder-opacity: 1;
+	color: rgba(107, 114, 128, var(--tw-placeholder-opacity));
+}
+.placeholder-gray-500:-ms-input-placeholder{
+	--tw-placeholder-opacity: 1;
+	color: rgba(107, 114, 128, var(--tw-placeholder-opacity));
+}
+.placeholder-gray-500::placeholder{
+	--tw-placeholder-opacity: 1;
+	color: rgba(107, 114, 128, var(--tw-placeholder-opacity));
+}
 .placeholder-gray-600::-moz-placeholder{
 	--tw-placeholder-opacity: 1;
 	color: rgba(75, 85, 99, var(--tw-placeholder-opacity));
@@ -2639,9 +2634,6 @@ select{
 }
 .opacity-70{
 	opacity: 0.7;
-}
-.opacity-90{
-	opacity: 0.9;
 }
 .shadow-sm{
 	--tw-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
@@ -3104,13 +3096,13 @@ select{
 	--tw-bg-opacity: 1;
 	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
 }
-.group:hover .group-hover\:text-gray-800{
-	--tw-text-opacity: 1;
-	color: rgba(31, 41, 55, var(--tw-text-opacity));
-}
 .group:hover .group-hover\:text-green-600{
 	--tw-text-opacity: 1;
 	color: rgba(5, 150, 105, var(--tw-text-opacity));
+}
+.group:hover .group-hover\:text-gray-800{
+	--tw-text-opacity: 1;
+	color: rgba(31, 41, 55, var(--tw-text-opacity));
 }
 .group:hover .group-hover\:text-blue-600{
 	--tw-text-opacity: 1;
@@ -3123,10 +3115,6 @@ select{
 .group:hover .group-hover\:text-gray-50{
 	--tw-text-opacity: 1;
 	color: rgba(249, 250, 251, var(--tw-text-opacity));
-}
-.group:hover .group-hover\:text-purple-400{
-	--tw-text-opacity: 1;
-	color: rgba(167, 139, 250, var(--tw-text-opacity));
 }
 .group:hover .group-hover\:opacity-100{
 	opacity: 1;
@@ -3151,13 +3139,13 @@ select{
 	--tw-border-opacity: 1;
 	border-color: rgba(75, 85, 99, var(--tw-border-opacity));
 }
-.dark .dark\:border-gray-500{
-	--tw-border-opacity: 1;
-	border-color: rgba(107, 114, 128, var(--tw-border-opacity));
-}
 .dark .dark\:border-gray-700{
 	--tw-border-opacity: 1;
 	border-color: rgba(55, 65, 81, var(--tw-border-opacity));
+}
+.dark .dark\:border-gray-500{
+	--tw-border-opacity: 1;
+	border-color: rgba(107, 114, 128, var(--tw-border-opacity));
 }
 .dark .dark\:border-gray-900{
 	--tw-border-opacity: 1;
@@ -3179,13 +3167,13 @@ select{
 	--tw-border-opacity: 1;
 	border-color: rgba(31, 41, 55, var(--tw-border-opacity));
 }
-.dark .dark\:border-gray-200{
-	--tw-border-opacity: 1;
-	border-color: rgba(229, 231, 235, var(--tw-border-opacity));
-}
 .dark .dark\:border-gray-300{
 	--tw-border-opacity: 1;
 	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
+}
+.dark .dark\:border-gray-200{
+	--tw-border-opacity: 1;
+	border-color: rgba(229, 231, 235, var(--tw-border-opacity));
 }
 .dark .dark\:border-t-gray-600{
 	--tw-border-opacity: 1;
@@ -3223,13 +3211,13 @@ select{
 	--tw-bg-opacity: 1;
 	background-color: rgba(124, 58, 237, var(--tw-bg-opacity));
 }
-.dark .dark\:bg-green-700{
-	--tw-bg-opacity: 1;
-	background-color: rgba(4, 120, 87, var(--tw-bg-opacity));
-}
 .dark .dark\:bg-gray-900{
 	--tw-bg-opacity: 1;
 	background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
+}
+.dark .dark\:bg-green-700{
+	--tw-bg-opacity: 1;
+	background-color: rgba(4, 120, 87, var(--tw-bg-opacity));
 }
 .dark .dark\:bg-purple-700{
 	--tw-bg-opacity: 1;
@@ -3238,10 +3226,6 @@ select{
 .dark .dark\:bg-purple-400{
 	--tw-bg-opacity: 1;
 	background-color: rgba(167, 139, 250, var(--tw-bg-opacity));
-}
-.dark .dark\:bg-red-600{
-	--tw-bg-opacity: 1;
-	background-color: rgba(220, 38, 38, var(--tw-bg-opacity));
 }
 .dark .dark\:bg-gray-100{
 	--tw-bg-opacity: 1;
@@ -3265,25 +3249,25 @@ select{
 	--tw-text-opacity: 1;
 	color: rgba(248, 113, 113, var(--tw-text-opacity));
 }
-.dark .dark\:text-gray-200{
-	--tw-text-opacity: 1;
-	color: rgba(229, 231, 235, var(--tw-text-opacity));
-}
 .dark .dark\:text-green-100{
 	--tw-text-opacity: 1;
 	color: rgba(209, 250, 229, var(--tw-text-opacity));
+}
+.dark .dark\:text-gray-200{
+	--tw-text-opacity: 1;
+	color: rgba(229, 231, 235, var(--tw-text-opacity));
 }
 .dark .dark\:text-blue-100{
 	--tw-text-opacity: 1;
 	color: rgba(219, 234, 254, var(--tw-text-opacity));
 }
-.dark .dark\:text-blue-400{
-	--tw-text-opacity: 1;
-	color: rgba(96, 165, 250, var(--tw-text-opacity));
-}
 .dark .dark\:text-gray-600{
 	--tw-text-opacity: 1;
 	color: rgba(75, 85, 99, var(--tw-text-opacity));
+}
+.dark .dark\:text-blue-400{
+	--tw-text-opacity: 1;
+	color: rgba(96, 165, 250, var(--tw-text-opacity));
 }
 .dark .dark\:text-gray-500{
 	--tw-text-opacity: 1;
@@ -3305,25 +3289,21 @@ select{
 	--tw-text-opacity: 1;
 	color: rgba(147, 197, 253, var(--tw-text-opacity));
 }
-.dark .dark\:text-blue-50{
-	--tw-text-opacity: 1;
-	color: rgba(239, 246, 255, var(--tw-text-opacity));
-}
-.dark .dark\:text-red-100{
-	--tw-text-opacity: 1;
-	color: rgba(254, 226, 226, var(--tw-text-opacity));
-}
-.dark .dark\:text-red-500{
-	--tw-text-opacity: 1;
-	color: rgba(239, 68, 68, var(--tw-text-opacity));
-}
-.dark .dark\:text-red-200{
-	--tw-text-opacity: 1;
-	color: rgba(254, 202, 202, var(--tw-text-opacity));
-}
 .dark .dark\:text-gray-800{
 	--tw-text-opacity: 1;
 	color: rgba(31, 41, 55, var(--tw-text-opacity));
+}
+.dark .dark\:placeholder-gray-400::-moz-placeholder{
+	--tw-placeholder-opacity: 1;
+	color: rgba(156, 163, 175, var(--tw-placeholder-opacity));
+}
+.dark .dark\:placeholder-gray-400:-ms-input-placeholder{
+	--tw-placeholder-opacity: 1;
+	color: rgba(156, 163, 175, var(--tw-placeholder-opacity));
+}
+.dark .dark\:placeholder-gray-400::placeholder{
+	--tw-placeholder-opacity: 1;
+	color: rgba(156, 163, 175, var(--tw-placeholder-opacity));
 }
 .dark .dark\:placeholder-gray-500::-moz-placeholder{
 	--tw-placeholder-opacity: 1;
@@ -3344,6 +3324,10 @@ select{
 	--tw-ring-opacity: 1;
 	--tw-ring-color: rgba(107, 114, 128, var(--tw-ring-opacity));
 }
+.dark .dark\:hover\:bg-gray-800:hover{
+	--tw-bg-opacity: 1;
+	background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
+}
 .dark .dark\:hover\:bg-purple-700:hover{
 	--tw-bg-opacity: 1;
 	background-color: rgba(109, 40, 217, var(--tw-bg-opacity));
@@ -3355,10 +3339,6 @@ select{
 .dark .dark\:hover\:bg-gray-700:hover{
 	--tw-bg-opacity: 1;
 	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
-}
-.dark .dark\:hover\:bg-gray-800:hover{
-	--tw-bg-opacity: 1;
-	background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
 }
 .dark .dark\:hover\:bg-purple-600:hover{
 	--tw-bg-opacity: 1;
@@ -3622,6 +3602,12 @@ select{
 	}
 	.md\:mt-2{
 		margin-top: 0.5rem;
+	}
+	.md\:mt-0\.5{
+		margin-top: 0.125rem;
+	}
+	.md\:mb-0{
+		margin-bottom: 0px;
 	}
 	.md\:-mt-14{
 		margin-top: -3.5rem;
